# alibabacloud-observability-mcp-server

./: .gitignore  CAHANGELOG.md  CHANGELOG.md  CONTRIBUTION.md  Dockerfile  FAQ.md  README.md  README_EN.md  contribution.md  license  pyproject.toml  requirements.txt  setup.py
sample/config/: knowledge_config.json
src/mcp_server_aliyun_observability/: __init__.py  server.py  toolloader.py  tools.py  utils.py
src/mcp_server_aliyun_observability/commons/: environment.py
src/mcp_server_aliyun_observability/libs/cms-20240330/: setup.py
src/mcp_server_aliyun_observability/libs/cms-20240330/alibabacloud_cms20240330/: client.py  models.py
src/mcp_server_aliyun_observability/libs/sls-20201230/: setup.py
src/mcp_server_aliyun_observability/libs/sls-20201230 4/alibabacloud_sls20201230/: client.py  models.py
src/mcp_server_aliyun_observability/libs/sls-20201230 5/alibabacloud_sls20201230/: models.py
src/mcp_server_aliyun_observability/libs/sls-20201230/alibabacloud_sls20201230/: client.py  models.py
src/mcp_server_aliyun_observability/toolkit/: arms_toolkit.py  cms_toolkit.py  sls_toolkit.py  util_toolkit.py
src/mcp_server_aliyun_observability/tools/: cms_toolkit.py  common_toolkit.py  demo_tool.py  metadata_toolkit.py  sls_tool.py  sls_toolkit.py
test/: sls_client_test.py
tests/: conftest.py  test_arms_toolkit.py  test_cms_toolkit.py  test_sls_toolkit.py  test_tools.py
