[project]
name = "aliyun-observability-server"
version = "0.1.0"
description = "aliyun observability server,provide observability service for aliyun"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.3.0", "alibabacloud_sls20201230==5.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
aliyun-observability-server = "aliyun_observability_server:main" 