[project]
name = "mcp-server-aliyun-observability"
version = "0.1.0"
description = "aliyun observability mcp server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.3.0", "alibabacloud_sls20201230==5.6.0", "alibabacloud_cms20240330==1.0.0","pydantic>=2.10.0"]

[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_aliyun_observability"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

exclude = [
    "**/*.pyc",
    "**/__pycache__",
    "**/*.pyo",
    "**/*.pyd",
    ".git",
    ".env",
    ".gitignore",
    "*.so",
    "*.dylib",
    "*.dll",
]

[project.scripts]
mcp-server-aliyun-observability = "mcp_server_aliyun_observability:main" 